# GrokWeb-to-API

./: .env.example  LICENSE  README.md  get_cookies.py  pyproject.toml
grok_client/: __init__.py  client.py  grok_openai_client.py  interactive.py  interactive_chat.py  server.py
