[build-system]
requires = ["poetry-core>=2.4.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "GrokWeb-to-API"
version = "0.3.0"
description = "A Python client for the Grok API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Mem0 Team", email = "taranjeet@mem0.ai"},
    {name = "LimonTH dev", email = "woolf_game.com@mail.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
homepage = "https://github.com/LimonTH/GrokWeb-to-API"
bug-tracker = "https://github.com/LimonTH/GrokWeb-to-API/issues"

[tool.poetry]
packages = [{include = "grok_client"}]